--- a/source/VotingApp/VotingApp/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
+++ b/source/VotingApp/VotingApp/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
@@ -4,5 +4,25 @@
     ViewData["Title"] = "Confirm email";
 }
 
-<h1>@ViewData["Title"]</h1>
-<partial name="_StatusMessage" model="Model.StatusMessage" />
+
+<div class="jumbotron jumbotron-fluid full-width text-white" style="margin-bottom: 0px;
+    height: 90vh; 
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(/Images/bannerImage5.jpg); 
+    background-size: cover; 
+    left: 50%;
+    margin-left: -50vw;
+    margin-right: -50vw;
+    max-width: 100vw;
+    position: relative;
+    right: 50%;
+    width: 100vw;"> 
+
+    <div class="container text-white">
+        <h1 class="display-4">@ViewData["Title"]</h1>
+        <hr class="mt-lg-5" style="border-top: 3px solid white; color: white; background-color: white;">
+
+        <partial name="_StatusMessage" model="Model.StatusMessage" />
+
+        <hr />
+    </div>
+</div>
