--- a/source/VotingApp/VotingApp/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/source/VotingApp/VotingApp/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -4,21 +4,38 @@
     ViewData["Title"] = "Forgot your password?";
 }
 
-<h1>@ViewData["Title"]</h1>
-<h2>Enter your email.</h2>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-floating">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                <label asp-for="Input.Email" class="form-label"></label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Reset Password</button>
-        </form>
+<div class="jumbotron jumbotron-fluid full-width text-white" style="margin-bottom: 0px;
+    height: 90vh; 
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(/Images/bannerImage5.jpg); 
+    background-size: cover; 
+    left: 50%;
+    margin-left: -50vw;
+    margin-right: -50vw;
+    max-width: 100vw;
+    position: relative;
+    right: 50%;
+    width: 100vw;"> 
+
+    <div class="container text-white">
+        <h1 class="display-4">@ViewData["Title"]</h1>
+        <hr class="mt-lg-5" style="border-top: 3px solid white; color: white; background-color: white;">
+
+        <h2>Enter your email.</h2>
+        <hr />
+
+        <div class="w-25">
+            <form method="post">
+                <div asp-validation-summary="All" class="text-danger"></div>
+                <div class="form-floating text-black-50">
+                    <input asp-for="Input.Email" class="form-control mb-3" aria-required="true" />
+                    <label asp-for="Input.Email" class="form-label"></label>
+                    <span asp-validation-for="Input.Email" class="text-danger"></span>
+                </div>
+                <button type="submit" class="w-100 btn btn-light btn-lg bg-success btn-outline-primary">Reset Password</button>
+            </form>
+        </div>
     </div>
+
 </div>
 
 @section Scripts {
