--- a/source/VotingApp/VotingApp/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/source/VotingApp/VotingApp/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -4,7 +4,21 @@
     ViewData["Title"] = "Register confirmation";
 }
 
-<h1>@ViewData["Title"]</h1>
+<div class="jumbotron jumbotron-fluid full-width" style="margin-bottom: 0px;
+    height: 90vh; 
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(/Images/bannerImage5.jpg); 
+    background-size: cover; 
+    left: 50%;
+    margin-left: -50vw;
+    margin-right: -50vw;
+    max-width: 100vw;
+    position: relative;
+    right: 50%;
+    width: 100vw;"> 
+
+    <div class="container text-white">
+
+<h1 class="display-4">@ViewData["Title"]</h1>
 @{
     if (@Model.DisplayConfirmAccountLink)
     {
@@ -20,4 +34,7 @@
 </p>
     }
 }
+    <div></div>
+</div>>
+
 
