--- a/source/VotingApp/VotingApp/Views/Home/Index.cshtml
+++ b/source/VotingApp/VotingApp/Views/Home/Index.cshtml
@@ -1,7 +1,11 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-<div class="jumbotron jumbotron-fluid full-width" style="margin-bottom: 0px; height: 80vh; background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/Images/bannerImage2.jpg); background-size: cover; left: 50%;
+<div class="jumbotron jumbotron-fluid full-width" style="margin-bottom: 0px; 
+    height: 90vh; 
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(/Images/bannerImage2.jpg); 
+    background-size: cover; 
+    left: 50%;
     margin-left: -50vw;
     margin-right: -50vw;
     max-width: 100vw;
@@ -9,13 +13,13 @@
     right: 50%;
     width: 100vw;">
     <div class="container text-white">
-<h1 class="display-4 pt-5">Welcome to Opiniony!</h1>
-        <p class="lead">Opiniony is an app that allows you to create a publish a vote for others to give their opinions on.</p>
+        <h1 class="display-4 pt-5">Welcome to Opiniony!</h1>
+        <p class="lead">Opiniony is an app that allows you to create and publish a vote for others to give their opinions on.</p>
         <hr class="mt-lg-5" style="border-top: 3px solid white; color: white; background-color: white;">
         <div class="row" style="padding-top: 5%";>
             <div class="col text-center">
                 <h3 class="h3">Create A Vote:</h3>
-                <a class="nav-link text-dark" asp-area="" asp-controller="Create" asp-action="Index"><button class="btn btn-light btn-lg" type="button">Create</button></a>
+                <a class="nav-link text-dark" asp-area="" asp-controller="Create" asp-action="Index"><button class="btn btn-light btn-lg bg-success btn-outline-primary" type="button">Create</button></a>
             </div>
         </div>
     </div>
