--- a/source/VotingApp/VotingApp/Views/Access/SubmitVote.cshtml
+++ b/source/VotingApp/VotingApp/Views/Access/SubmitVote.cshtml
@@ -21,12 +21,30 @@
                     <p>@ViewBag.ErrorMessage</p>
                 </div>
             }
+            @if (Model.submittedVote != null)
+            {
+                <div class="alert alert-danger">
+                    <p>You have already submitted your vote</p>
+                </div>
+            }
             <h4 class="text-white">Vote Options:</h4>
             @foreach (var a in Model.vote.VoteOptions)
             {
                 <div class="row justify-content-center text-center">
                     <div class="form-chec justify-content-center text-center">
-                        <input class="form-check-input" type="radio" value="@a.Id" name="choice" id="flexRadioDefault1">
+                        @if (Model.submittedVote != null)
+                        {
+                            @if (Model.submittedVote.VoteChoice == a.Id)
+                            {
+                                <input class="form-check-input" checked disabled type="radio" value="@a.Id" name="choice" id="flexRadioDefault1">
+                            } else
+                            {
+                                <input class="form-check-input" disabled type="radio" value="@a.Id" name="choice" id="flexRadioDefault1">
+                            }
+                        } else
+                        {
+                            <input class="form-check-input" type="radio" value="@a.Id" name="choice" id="flexRadioDefault1">
+                        }
                         <label class="form-check-label text-white" for="flexRadioDefault1">
                             @a.VoteOptionString
                         </label>
@@ -34,7 +52,13 @@
                 </div>
             }
             <span class="input-group-btn">
-                <button type="submit" class="mt-2 btn btn-primary">Submit</button>
+                @if (Model.submittedVote != null)
+                {
+                    <button type="submit" disabled class="mt-2 btn btn-dark">Submit</button>
+                } else
+                {
+                    <button type="submit" class="mt-2 btn btn-primary">Submit</button>
+                }
             </span>
         </div>
     </form>
