--- a/source/VotingApp/VotingApp/Views/Create/Index.cshtml
+++ b/source/VotingApp/VotingApp/Views/Create/Index.cshtml
@@ -56,14 +56,19 @@
                             <label class="form-check-label" for="flexCheckDefault">
                                 Is this vote anonymous? <span data-toggle="tooltip" data-placement="bottom" title="Check this anonymous button if you just want the overall results of the vote where individual user votes will be kept anonymous.">&#8505;</span>
                             </label>
-
+                            </div>
+                            <div class="col align-self-center">
+                            <input asp-for="PrivateVote" class="form-check-input" type="checkbox" value="true" id="privatecheck">
+                            <label class="form-check-label" for="privatecheck">
+                                Is this a priavte vote? <span data-toggle="tooltip" data-placement="bottom" title="Check this if you want to specify who can cast a vote for this given vote.">&#8505;</span>
+                            </label>
                         </div>
                     </div>
                 </div>
                 <div class="form-row mb-4">
                     <div class="row">
                         <div class="form-group">
-                            <label class="form-check-label" for="flexCheckDefault">
+                            <label class="form-check-label" for="datetime">
                                 When does the voting close?<span data-toggle="tooltip" data-placement="bottom" title="Enter the date and time for when you want the voting to stop, leave empty for the voting to never close.">&#8505;</span>
                             </label>
                             <input asp-for="VoteCloseDateTime" type="text" id="datetime" readonly/>
