--- a/source/VotingApp/VotingApp/Views/Shared/_LoginPartial.cshtml
+++ b/source/VotingApp/VotingApp/Views/Shared/_LoginPartial.cshtml
@@ -9,7 +9,10 @@
     <li class="nav-item">
         <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
     </li>
-
+      <li  class="nav-item">
+            <a class="nav-link text-dark" asp-area="" asp-controller="Access" asp-action="VoteHistory">Vote History</a>
+        </li>
+    
     <li class="nav-item">
         <a class="nav-link text-dark" asp-area="" asp-controller="Create" asp-action="CreatedVotesReview">Vote Review</a>
     </li>
