--- a/source/VotingApp/VotingApp/Views/Access/SubmitVote.cshtml
+++ b/source/VotingApp/VotingApp/Views/Access/SubmitVote.cshtml
@@ -12,7 +12,14 @@
         <h4 class="text-white">Description:</h4>
         <p class="text-white">@Model.vote.VoteDiscription</p>
     </div>
-    <form asp-action="CastVote" method="get" class="col-lg-6 offset-lg-3 ">
+    @{string formValue = (Model.submittedVote == null ? "CastVote" : "EditCastVote" );}
+  
+    <form asp-action=@formValue method="get" class="col-lg-6 offset-lg-3 ">
+   
+        @if(Model.submittedVote != null)
+        {
+            <input name="id" type="number" value="@Model.submittedVote.Id" hidden></input>
+        }
         <input name="voteID" value="@Model.vote.Id" type="number" hidden/>
         <div class="row justify-content-center text-center">
             @if (ViewBag.ErrorMessage != null)
@@ -21,12 +28,12 @@
                     <p>@ViewBag.ErrorMessage</p>
                 </div>
             }
-            @if (Model.submittedVote != null)
+            <!--@if (Model.submittedVote != null)
             {
                 <div class="alert alert-danger">
                     <p>You have already submitted your vote</p>
                 </div>
-            }
+            }-->
             <h4 class="text-white">Vote Options:</h4>
             @foreach (var a in Model.vote.VoteOptions)
             {
@@ -36,10 +43,10 @@
                         {
                             @if (Model.submittedVote.VoteChoice == a.Id)
                             {
-                                <input class="form-check-input" checked disabled type="radio" value="@a.Id" name="choice" id="flexRadioDefault1">
+                                <input class="form-check-input" checked type="radio" value="@a.Id" name="choice" id="flexRadioDefault1">
                             } else
                             {
-                                <input class="form-check-input" disabled type="radio" value="@a.Id" name="choice" id="flexRadioDefault1">
+                                <input class="form-check-input" type="radio" value="@a.Id" name="choice" id="flexRadioDefault1">
                             }
                         } else
                         {
@@ -54,7 +61,7 @@
             <span class="input-group-btn">
                 @if (Model.submittedVote != null)
                 {
-                    <button type="submit" disabled class="mt-2 btn btn-dark">Submit</button>
+                    <button type="submit" class="mt-2 btn btn-primary">Submit</button>
                 } else
                 {
                     <button type="submit" class="mt-2 btn btn-primary">Submit</button>
