--- a/source/VotingApp/VotingApp/Views/Access/VoteHistory.cshtml
+++ b/source/VotingApp/VotingApp/Views/Access/VoteHistory.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<SubmittedVote>
+﻿@using VotingApp.ViewModel
+@model IEnumerable<SubmittedVoteHistoryVM>
 @{
     ViewData["Title"] = "Vote History";
 }
@@ -21,23 +22,50 @@
         {
             
                 <div class="accordion-item">
-                    <h2 class="accordion-header" id="@Html.Raw("HeadingA" + vote.Id)">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="@Html.Raw("#collapseA" + vote.Id)" aria-expanded="false" aria-controls="@Html.Raw("collapseA" + vote.Id)">
-                            <div class="row">
-                                <div class="col">Vote Title: @vote.CreatedVote.VoteTitle</div><div class="col">Date Voted: @vote.DateCast</div> 
+                    <h2 class="accordion-header" id="@Html.Raw("HeadingA" + vote.subVote.Id)">
+                        <button class="btn btn-lg btn-block collapsed" style="width: 100%" type="button" data-bs-toggle="collapse" data-bs-target="@Html.Raw("#collapseA" + vote.subVote.Id)" aria-expanded="false" aria-controls="@Html.Raw("collapseA" + vote.subVote.Id)">
+                            <div class="row ">
+                                <div class="col-sm text-left">Vote Title: @vote.subVote.CreatedVote.VoteTitle</div>
+                                <div class="col-sm text-left"> Your Choice: @vote.voteOption.VoteOptionString</div>
+                                <div class="col-sm text-right">Date Voted: @vote.subVote.DateCast</div> 
                             </div>  
                         </button>
                         
                     </h2>
-                    <div id="@Html.Raw("collapseA" + vote.Id)" class="accordion-collapse collapse" aria-labelledby="@Html.Raw("HeadingA" + vote.Id)" data-bs-parent="#accordionExample">
+                    <div id="@Html.Raw("collapseA" + vote.subVote.Id)" class="accordion-collapse collapse" aria-labelledby="@Html.Raw("HeadingA" + vote.subVote.Id)" data-bs-parent="#accordionExample">
                         <div class="accordion-body text-black">
-                            @vote.CreatedVote.VoteDiscription
-                            <ul>
-                                @foreach (var option in vote.CreatedVote.VoteOptions)
-                                {
-                                    <li>@option.VoteOptionString</li>
-                                }
-                            </ul>
+                            <div class="row">
+                                <div class="col">
+                                    <h4>Vote Discription:</h4>
+                                    @vote.subVote.CreatedVote.VoteDiscription
+                                </div>
+                                <div class="col">
+                                    <h4>Vote Options:</h4>
+                                    <ul>
+                                        @foreach (var option in vote.subVote.CreatedVote.VoteOptions)
+                                        {
+                                            <li>@option.VoteOptionString</li>
+                                        }
+                                    </ul>
+                                </div>
+                                <div class="col">
+                                    <h4>Close Date:</h4>
+                                    @if(vote.subVote.CreatedVote.VoteCloseDateTime != null){@Html.Raw($"{vote.subVote.CreatedVote.VoteCloseDateTime.Value.Month}/{vote.subVote.CreatedVote.VoteCloseDateTime.Value.Day}/{vote.subVote.CreatedVote.VoteCloseDateTime.Value.Year} {vote.subVote.CreatedVote.VoteCloseDateTime.Value.TimeOfDay.ToString("hh\\:mm")}")}
+                                    @if((vote.subVote.CreatedVote.VoteOpenDateTime == null || vote.subVote.CreatedVote.VoteOpenDateTime >= DateTime.Now) && vote.subVote.CreatedVote.VoteCloseDateTime >= DateTime.Now)
+                                    {
+                                        <form asp-action="EditSubVote" method="post">
+		                                <button type="submit" style="width:140px !important" class="btn btn-light bg-success btn-outline-primary" name="ID" value="@vote.subVote.CreatedVote.Id">Edit</button>
+	                                    </form>
+                                
+                                    }
+                                    else
+                                    {
+                                        <button style="width:140px !important" class="btn btn-light bg-success btn-outline-primary disabled" name="id" value="@vote.subVote.CreatedVote.Id" disabled>Edit</button>
+                                    }
+                                </div>
+                                
+                            
+                            </div>
                         </div>
                     </div>
                 </div>
