--- a/source/VotingApp/VotingApp/Views/Shared/_LoginPartial.cshtml
+++ b/source/VotingApp/VotingApp/Views/Shared/_LoginPartial.cshtml
@@ -3,7 +3,7 @@
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 
-<ul class="navbar-nav">
+<ul class="navbar-nav" id="UserItems">
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
